@@ -1,3 +1,12 @@
+2010-01-08  Yong Li  <yoli@rim.com>
+
+        Reviewed by Darin Adler.
+
+        Remove unnecessary #include from FastMalloc.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=33393
+
+        * wtf/FastMalloc.cpp:
+
 2010-01-08  Eric Seidel  <eric@webkit.org>
 
         No review, rolling out r52983.
